# create-eggscaliber-app

./: .gitignore  README.md  copier.yaml  justfile  pyproject.toml
template/: .commitlintrc.json  .editorconfig  .env.example  .gitignore  .lintstagedrc.json  CLAUDE.md  LICENSE  README.md  biome.json  docker-compose.yml  justfile  package.json  pnpm-workspace.yaml  pyproject.toml  render.yaml  skills-lock.json  vercel.json
template/.claude/skills/alembic/: SKILL.md
template/.claude/skills/biome/: SKILL.md
template/.claude/skills/next-best-practices/: image.md  metadata.md  rsc-boundaries.md  scripts.md
template/.claude/skills/posthog/: SKILL.md
template/.claude/skills/review-pr-comments/: SKILL.md
template/.claude/skills/storybook/: SKILL.md
template/.claude/skills/vercel-react-best-practices/: AGENTS.md
template/.github/: dependabot.yml
template/.github/workflows/: deploy.yml  pr.yml
template/apps/api/: alembic.ini  pyproject.toml
template/apps/api/migrations/: env.py  script.py.mako
template/apps/api/src/: config.py  database.py  main.py
template/apps/api/tests/: conftest.py  test_health.py  test_migrations.py
template/apps/web/: eslint.config.mjs  next.config.ts  package.json  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
template/apps/web/.storybook/: main.ts  preview.ts
template/docker/init/: 01-create-databases.sql  02-extensions.sql
template/docs/: patterns.md  testing.md
template/docs/patterns/: backend.md  frontend.md  infrastructure.md
template/scripts/: generate-types.sh
(+30 files in other folders)
