[project]
name = "{{ project_name }}"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv.workspace]
members = ["apps/api"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]
asyncio_mode = "auto"
