[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlmodel>=0.0.21",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
    "psycopg2-binary>=2.9.0",
{% if use_sentry %}
    "sentry-sdk[fastapi]>=2.0.0",
{% endif %}
{% if use_marimo %}
    "marimo>=0.0.1",
{% endif %}
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pip-audit>=2.7.0",
    "ruff>=0.9.0",
    "ty>=0.0.1a0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
